# clara

./: .coverage  .gitignore  README.md  pyproject.toml
.github/badges/: coverage.json
.github/workflows/: test.yml
docs/: conf.py
scripts/: cl_validation.py
scripts/archive/: cl_validation_graph.py
scripts/ci/: update_coverage_badge.py
src/clara/: __init__.py
src/clara/agents/: __init__.py
src/clara/agents/cell_validation/: __init__.py  cell_agent.py  cell_agent_config.py  cell_agent_tools.py
src/clara/agents/paperqa/: __init__.py  paperqa_agent.py  paperqa_config.py
src/clara/graphs/: __init__.py  cl_validation.py  graph_agent.py
src/clara/schemas/: workflow_output.schema.json
src/clara/services/: __init__.py  agent_adapters.py  dataset_loader.py  false_assertion_service.py  paperqa_service.py  report_service.py
src/clara/utils/: __init__.py  cl_validation_config.py  io_utils.py  validation_models.py
src/clara/validation/: __init__.py
tests/data/: cells_data.json
tests/data/reference/CL_4052001/: PMID_25045600.txt  PMID_28067220.txt  PMID_37008045.txt
tests/integration/: test_cl_validation_integration.py  test_integration_env.py
tests/unit/: test_agents.py  test_cl_validation_workflow.py  test_services.py  test_utils.py
